calı calc yaptım

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="calc">
 
       <div class="head">
-        <h4>cal</h4>
+        <h4>calc</h4>
         <div class="mode">
           <p>TEMA</p>
           <div class="choice">
