--- a/gecemodu.html
+++ b/gecemodu.html
@@ -26,7 +26,7 @@
               <p>2</p>
               <p>3</p>
             </div>
-            <button class="btn-tema"><a href="/koyurenk.html"><img src="/assets/img/Oval.svg" alt=""></a></button>
+            <button class="btn-tema"><a href="/index.html"><img src="/assets/img/Oval.svg" alt=""></a></button>
           </div>
         </div>
       </div>
